updates to fix link on the list cmr task